test & docs: Implement unit tests with JUnit 5, Mockito and configure OpenAPI Swagger